--- a/src/components/table.css
+++ b/src/components/table.css
@@ -1,8 +1,10 @@
 .table {
   margin-top: 20px;
   overflow: scroll;
-  height: 400px;
   color: #6a5d5d;
+  background-color: white;
+  height: 400px;
+  margin-bottom: 20px;
 }
 
 .table tr {
@@ -12,6 +14,7 @@
 
 .table td {
   padding: 0.5rem;
+  border: none;
 }
 
 .table tr:nth-of-type(odd) {
